--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>некий текст</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum delectus dolorum esse quos aut necessitatibus explicabo culpa, neque ducimus laborum, optio perspiciatis, amet repellendus veritatis soluta quaerat totam atque ex!</p>
 </body>
 </html>
